added movement, working on collisions

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <button id="restart-game-over"> Play Again </button>
     </div>
     <script src="js/player.js"></script>
+    <script src="js/DOM.js"></script>
     <script src="js/game.js"></script>
     <script src="js/weapons.js"></script>
     <script src="js/zombie.js"></script>
